--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,15 @@ spring.jpa.hibernate.ddl-auto= update
 
 # jwt
 jwt.secrete = PROJECTMANAGEMENTAPP
+
+# server
+server.port=8080
+server.servlet.context-path=/apams
+
+# smtp
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=apams.egerton@gmail.com
+spring.mail.password=4compsciSTU
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
