--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,11 @@ spring.mail.username=apams.egerton@gmail.com
 spring.mail.password=4compsciSTU
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# cloudinary
+cloudinary.api_key=369116188552444
+cloudinary.api_secret=WUlqQrV4i9Hu09W8sE4OmXZxI54
+cloudinary.cloud_name=apams
