--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/project_management_db?useSSL=false
-spring.datasource.username= root
-spring.datasource.password= 4Sirah@123
+spring.datasource.url=${APAMS_DB_URL}
+spring.datasource.username=${APAMS_DB_USERNAME}
+spring.datasource.password=${APAMS_DB_PASSWORD}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -8,16 +8,16 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto= update
 
 # jwt
-jwt.secrete = PROJECTMANAGEMENTAPP
+jwt.secrete=${APAMS_JWT_SECRET}
 
 # server
 server.port=8080
-
+logging.file.name=logs/logs.log
 # smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=apams.egerton@gmail.com
-spring.mail.password=4compsciSTU
+spring.mail.username=${APAMS_MAIL_USERNAME}
+spring.mail.password=${APAMS_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -25,6 +25,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # cloudinary
-cloudinary.api_key=369116188552444
-cloudinary.api_secret=WUlqQrV4i9Hu09W8sE4OmXZxI54
-cloudinary.cloud_name=apams
+cloudinary.api_key=${APAMS_CLOUDINARY_KEY}
+cloudinary.api_secret=${APAMS_CLOUDINARY_SECRET}
+cloudinary.cloud_name=${APAMS_CLOUDINARY_NAME}
