--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-summernote": "^2.0.2",
+    "react-to-print": "^2.14.3",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
