--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^17.0.2",
     "react-file-viewer": "^1.2.1",
+    "react-google-charts": "^4.0.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
