--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "react-scripts": "4.0.3",
     "react-summernote": "^2.0.2",
     "react-to-print": "^2.14.3",
+    "serve": "^13.0.2",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
