--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=${APAMS_DB_URL}
-spring.datasource.username=${APAMS_DB_USERNAME}
-spring.datasource.password=${APAMS_DB_PASSWORD}
+spring.datasource.url=${APAMS_DB_URL: jdbc:mysql//localhost:3306/apamsdb}
+spring.datasource.username=${APAMS_DB_USERNAME:apamsdb}
+spring.datasource.password=${APAMS_DB_PASSWORD:4Apamsdb@123}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto= update
 
 # jwt
-jwt.secrete=${APAMS_JWT_SECRET}
+jwt.secrete=${APAMS_JWT_SECRET:MySecureSecret}
 
 # server
 server.port=8080
@@ -16,8 +16,8 @@ logging.file.name=logs/logs.log
 # smtp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${APAMS_MAIL_USERNAME}
-spring.mail.password=${APAMS_MAIL_PASSWORD}
+spring.mail.username=${APAMS_MAIL_USERNAME:siranjofu@gmail.com}
+spring.mail.password=${APAMS_MAIL_PASSWORD:jjsdaiwjtnlfeyer}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
@@ -25,6 +25,6 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # cloudinary
-cloudinary.api_key=${APAMS_CLOUDINARY_KEY}
-cloudinary.api_secret=${APAMS_CLOUDINARY_SECRET}
-cloudinary.cloud_name=${APAMS_CLOUDINARY_NAME}
+cloudinary.api_key=${APAMS_CLOUDINARY_KEY:581162377731944}
+cloudinary.api_secret=${APAMS_CLOUDINARY_SECRET:cUCH9Bl7weNhFuhCpRZrIZvEAh8}
+cloudinary.cloud_name=${APAMS_CLOUDINARY_NAME:wachiye}
